tests/error/06.desc
Runtime error - assignment func: negative index